Codigo com estrutura para funcionalidade de perpetuar imagens